@@ -8,6 +8,10 @@ namespace NYT::NElection {
 
 ////////////////////////////////////////////////////////////////////////////////
 
+using TPeerIdSet = THashSet<TPeerId>;
+
+////////////////////////////////////////////////////////////////////////////////
+
 DECLARE_REFCOUNTED_STRUCT(IElectionCallbacks)
 DECLARE_REFCOUNTED_STRUCT(IElectionManager)
 
