@@ -1,10 +1,16 @@
 #pragma once
 
+#include <yt/server/lib/election/public.h>
+
 #include <yt/ytlib/hydra/public.h>
 
 #include <yt/core/misc/public.h>
 
 namespace NYT::NHydra {
+
+////////////////////////////////////////////////////////////////////////////////
+
+using NElection::TPeerIdSet;
 
 ////////////////////////////////////////////////////////////////////////////////
 
