@@ -48,6 +48,7 @@ message TReqPingFollower
     required NYT.NProto.TGuid epoch_id = 1;
     required int64 committed_revision = 2;
     required int64 ping_revision = 3;
+    repeated int32 alive_peers = 4; // peer ids
 }
 
 message TRspPingFollower
